--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,40 @@
     <string name="app_name">Youtube Api Testing</string>
     <string name="reminders_notification_channel_id">notification_channel_id</string>
     <string name="title_notification_reminder">Time to study</string>
-    <string name="description_notification_reminder">It\'s time to watch %s from channel %s</string>
+    <string name="description_notification_reminder">It\'s time to watch a playlist \"%s\" from channel \"%s\"</string>
+    <string name="player_instruction">If you feel uncomfortable to watch videos here or need to check comments, you can watch videos in youtube and track completed video manually.</string>
+    <plurals name="time_ago_years">
+        <item quantity="one">%1\$d year ago</item>
+        <item quantity="other">%1\$d years ago</item>
+    </plurals>
+
+    <plurals name="time_ago_months">
+        <item quantity="one">%1\$d month ago</item>
+        <item quantity="other">%1\$d months ago</item>
+    </plurals>
+
+    <plurals name="time_ago_weeks">
+        <item quantity="one">%1\$d week ago</item>
+        <item quantity="other">%1\$d weeks ago</item>
+    </plurals>
+
+
+    <plurals name="time_ago_days">
+        <item quantity="one">%1\$d day ago</item>
+        <item quantity="other">%1\$d days ago</item>
+    </plurals>
+
+    <plurals name="time_ago_hours">
+        <item quantity="one">%1\$d hour ago</item>
+        <item quantity="other">%1\$d hours ago</item>
+    </plurals>
+
+    <plurals name="time_ago_minutes">
+        <item quantity="one">%1\$d minute ago</item>
+        <item quantity="other">%1\$d minutes ago</item>
+    </plurals>
+
+    <string name="time_ago_just_now">Just now</string>
+
+
 </resources>
